[project]
name = "vibebooster"
version = "0.1.0"
description = "Intercept Anthropic API requests and compress them to reduce token count."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=1.99.9",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
